--- a/style/main.css
+++ b/style/main.css
@@ -58,4 +58,17 @@ header nav a:hover{
     height: 500px;
     background-size: cover;
 
+    display: flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items:flex-start;
+
+}
+
+.filme-principal .descricao{
+    margin-bottom: 90px;
+}
+
+.titulo{
+    font-size: 40px;
 }
