add de filmes e outros

--- a/style/main.css
+++ b/style/main.css
@@ -15,7 +15,7 @@
 
  body {
      background: var(--preta);
-     font-family: 'Times New Roman', Times, serif;
+     font-family: Arial, Helvetica, sans-serif, Times, serif;
      color: #fff;
 
  }
@@ -108,4 +108,9 @@ header nav a:hover{
     height: 100%;
     width: 100%;
     display: block;
+}
+
+.carrosel-filmes {
+
+    margin-top: 5px;
 }
